{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 81,
  "lineage": "e0ffe138-891e-4eee-e819-8dff9717dcd7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:REDACTED_ACCOUNT_ID:security-group/sg-0abc95587bd8f1b91",
            "description": "Allow HTTP from the internet to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0abc95587bd8f1b91",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "backend-orchestrator-dev-alb-20260731045308763200000004",
            "name_prefix": "backend-orchestrator-dev-alb-",
            "owner_id": "REDACTED_ACCOUNT_ID",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "backend-orchestrator-dev-alb",
              "Project": "backend-orchestrator"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "backend-orchestrator-dev-alb",
              "Project": "backend-orchestrator"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e263608c4c294ea8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:REDACTED_ACCOUNT_ID:security-group/sg-0f2eef1fb7ec3f346",
            "description": "Allow traffic from ALB to ECS Fargate tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f2eef1fb7ec3f346",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Traffic from ALB",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0abc95587bd8f1b91"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "backend-orchestrator-dev-ecs-tasks-2026073104531242440000000a",
            "name_prefix": "backend-orchestrator-dev-ecs-tasks-",
            "owner_id": "REDACTED_ACCOUNT_ID",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "backend-orchestrator-dev-ecs-tasks",
              "Project": "backend-orchestrator"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "backend-orchestrator-dev-ecs-tasks",
              "Project": "backend-orchestrator"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e263608c4c294ea8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "opensearch_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:REDACTED_ACCOUNT_ID:security-group/sg-07c8505b27c0a0bd5",
            "description": "Allow HTTPS from ECS tasks to OpenSearch Serverless VPC endpoint",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07c8505b27c0a0bd5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTPS from ECS tasks",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f2eef1fb7ec3f346"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "backend-orchestrator-dev-opensearch-2026073104531557050000000c",
            "name_prefix": "backend-orchestrator-dev-opensearch-",
            "owner_id": "REDACTED_ACCOUNT_ID",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "backend-orchestrator-dev-opensearch-endpoint",
              "Project": "backend-orchestrator"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "backend-orchestrator-dev-opensearch-endpoint",
              "Project": "backend-orchestrator"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e263608c4c294ea8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_tasks",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:REDACTED_ACCOUNT_ID:loadbalancer/app/backend-orchestrator-dev-alb/b9acb6dc93d32a9c",
            "arn_suffix": "app/backend-orchestrator-dev-alb/b9acb6dc93d32a9c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "backend-orchestrator-dev-alb-1430601288.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:REDACTED_ACCOUNT_ID:loadbalancer/app/backend-orchestrator-dev-alb/b9acb6dc93d32a9c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "backend-orchestrator-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0826f0ee684e9bc17",
              "sg-0abc95587bd8f1b91"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-014e2e930d87d9200"
              },
              {
                "subnet_id": "subnet-0df1e6e4eefd620d4"
              }
            ],
            "subnets": [
              "subnet-014e2e930d87d9200",
              "subnet-0df1e6e4eefd620d4"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "backend-orchestrator",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "backend-orchestrator",
              "terraform-aws-modules": "alb"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0e263608c4c294ea8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:REDACTED_ACCOUNT_ID:listener/app/backend-orchestrator-dev-alb/b9acb6dc93d32a9c/9ecfb5c996f52354",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:REDACTED_ACCOUNT_ID:targetgroup/ecs-20260731045308932700000005/0bbfc729d0c15538",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:REDACTED_ACCOUNT_ID:listener/app/backend-orchestrator-dev-alb/b9acb6dc93d32a9c/9ecfb5c996f52354",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:REDACTED_ACCOUNT_ID:loadbalancer/app/backend-orchestrator-dev-alb/b9acb6dc93d32a9c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "backend-orchestrator",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "backend-orchestrator",
              "terraform-aws-modules": "alb"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ecs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:REDACTED_ACCOUNT_ID:targetgroup/ecs-20260731045308932700000005/0bbfc729d0c15538",
            "arn_suffix": "targetgroup/ecs-20260731045308932700000005/0bbfc729d0c15538",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/v1/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:REDACTED_ACCOUNT_ID:targetgroup/ecs-20260731045308932700000005/0bbfc729d0c15538",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-2:REDACTED_ACCOUNT_ID:loadbalancer/app/backend-orchestrator-dev-alb/b9acb6dc93d32a9c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecs-20260731045308932700000005",
            "name_prefix": "ecs-",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "backend-orchestrator",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "backend-orchestrator",
              "terraform-aws-modules": "alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0e263608c4c294ea8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:REDACTED_ACCOUNT_ID:security-group/sg-0826f0ee684e9bc17",
            "description": "Security group for backend-orchestrator-dev-alb application load balancer",
            "egress": [],
            "id": "sg-0826f0ee684e9bc17",
            "ingress": [],
            "name": "backend-orchestrator-dev-alb-20260731045310118700000008",
            "name_prefix": "backend-orchestrator-dev-alb-",
            "owner_id": "REDACTED_ACCOUNT_ID",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "backend-orchestrator",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "backend-orchestrator",
              "terraform-aws-modules": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e263608c4c294ea8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:REDACTED_ACCOUNT_ID:subnet/subnet-0f6f6769840614da7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.3.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6f6769840614da7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "REDACTED_ACCOUNT_ID",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "backend-orchestrator-dev-vpc-private-ap-southeast-2a",
              "Project": "backend-orchestrator",
              "Tier": "private"
            },
            "vpc_id": "vpc-0e263608c4c294ea8"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:REDACTED_ACCOUNT_ID:security-group/sg-067679039fb1519d9",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-067679039fb1519d9",
            "ingress": [],
            "name": "backend-orchestrator-dev-service-2026073104531368110000000b",
            "name_prefix": "backend-orchestrator-dev-service-",
            "owner_id": "REDACTED_ACCOUNT_ID",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "backend-orchestrator-dev-service",
              "Project": "backend-orchestrator"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "backend-orchestrator-dev-service",
              "Project": "backend-orchestrator"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e263608c4c294ea8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs_service.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:REDACTED_ACCOUNT_ID:network-acl/acl-0c7af5ae3a8096add",
            "default_network_acl_id": "acl-0c7af5ae3a8096add",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0c7af5ae3a8096add",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "REDACTED_ACCOUNT_ID",
            "subnet_ids": [
              "subnet-014e2e930d87d9200",
              "subnet-0df1e6e4eefd620d4",
              "subnet-0eec416fa55709f4a",
              "subnet-0f6f6769840614da7"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "backend-orchestrator-dev-vpc-default",
              "Project": "backend-orchestrator"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "backend-orchestrator-dev-vpc-default",
              "Project": "backend-orchestrator"
            },
            "vpc_id": "vpc-0e263608c4c294ea8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:REDACTED_ACCOUNT_ID:route-table/rtb-0f7bb8b08d49c87cc",
            "default_route_table_id": "rtb-0f7bb8b08d49c87cc",
            "id": "rtb-0f7bb8b08d49c87cc",
            "owner_id": "REDACTED_ACCOUNT_ID",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "backend-orchestrator-dev-vpc-default",
              "Project": "backend-orchestrator"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "backend-orchestrator-dev-vpc-default",
              "Project": "backend-orchestrator"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0e263608c4c294ea8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:REDACTED_ACCOUNT_ID:security-group/sg-0eab15910b4747655",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0eab15910b4747655",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "REDACTED_ACCOUNT_ID",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "backend-orchestrator-dev-vpc-default",
              "Project": "backend-orchestrator"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "backend-orchestrator-dev-vpc-default",
              "Project": "backend-orchestrator"
            },
            "vpc_id": "vpc-0e263608c4c294ea8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ba64dbf96c64199f",
            "arn": "arn:aws:ec2:ap-southeast-2:REDACTED_ACCOUNT_ID:elastic-ip/eipalloc-0ba64dbf96c64199f",
            "association_id": "eipassoc-04b0f6691bd207e22",
            "domain": "vpc",
            "id": "eipalloc-0ba64dbf96c64199f",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-090616c0066934ee0",
            "private_dns": "ip-10-0-1-40.ap-southeast-2.compute.internal",
            "private_ip": "10.0.1.40",
            "public_dns": "ec2-52-62-27-44.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "52.62.27.44",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "backend-orchestrator-dev-vpc-ap-southeast-2a",
              "Project": "backend-orchestrator"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "backend-orchestrator-dev-vpc-ap-southeast-2a",
              "Project": "backend-orchestrator"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:REDACTED_ACCOUNT_ID:internet-gateway/igw-0b7ee2ef4788e2def",
            "id": "igw-0b7ee2ef4788e2def",
            "owner_id": "REDACTED_ACCOUNT_ID",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "backend-orchestrator-dev-vpc",
              "Project": "backend-orchestrator"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "backend-orchestrator-dev-vpc",
              "Project": "backend-orchestrator"
            },
            "vpc_id": "vpc-0e263608c4c294ea8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ba64dbf96c64199f",
            "association_id": "eipassoc-04b0f6691bd207e22",
            "connectivity_type": "public",
            "id": "nat-0ebdd39cc2d2b2780",
            "network_interface_id": "eni-090616c0066934ee0",
            "private_ip": "10.0.1.40",
            "public_ip": "52.62.27.44",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0df1e6e4eefd620d4",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "backend-orchestrator-dev-vpc-ap-southeast-2a",
              "Project": "backend-orchestrator"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "backend-orchestrator-dev-vpc-ap-southeast-2a",
              "Project": "backend-orchestrator"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01c114068189f78ce1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ebdd39cc2d2b2780",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01c114068189f78ce",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b7ee2ef4788e2def",
            "id": "r-rtb-0293ffcc5db1f8a7b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0293ffcc5db1f8a7b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:REDACTED_ACCOUNT_ID:route-table/rtb-01c114068189f78ce",
            "id": "rtb-01c114068189f78ce",
            "owner_id": "REDACTED_ACCOUNT_ID",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ebdd39cc2d2b2780",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "backend-orchestrator-dev-vpc-private",
              "Project": "backend-orchestrator"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "backend-orchestrator-dev-vpc-private",
              "Project": "backend-orchestrator"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e263608c4c294ea8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:REDACTED_ACCOUNT_ID:route-table/rtb-0293ffcc5db1f8a7b",
            "id": "rtb-0293ffcc5db1f8a7b",
            "owner_id": "REDACTED_ACCOUNT_ID",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b7ee2ef4788e2def",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "backend-orchestrator-dev-vpc-public",
              "Project": "backend-orchestrator"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "backend-orchestrator-dev-vpc-public",
              "Project": "backend-orchestrator"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e263608c4c294ea8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a9542fd3b51acf5",
            "route_table_id": "rtb-01c114068189f78ce",
            "subnet_id": "subnet-0f6f6769840614da7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05180c2a13886fb63",
            "route_table_id": "rtb-01c114068189f78ce",
            "subnet_id": "subnet-0eec416fa55709f4a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034fad56fa8f1fe79",
            "route_table_id": "rtb-0293ffcc5db1f8a7b",
            "subnet_id": "subnet-0df1e6e4eefd620d4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05305ba1b635d9bc4",
            "route_table_id": "rtb-0293ffcc5db1f8a7b",
            "subnet_id": "subnet-014e2e930d87d9200"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:REDACTED_ACCOUNT_ID:subnet/subnet-0f6f6769840614da7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6f6769840614da7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "REDACTED_ACCOUNT_ID",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "backend-orchestrator-dev-vpc-private-ap-southeast-2a",
              "Project": "backend-orchestrator",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "backend-orchestrator-dev-vpc-private-ap-southeast-2a",
              "Project": "backend-orchestrator",
              "Tier": "private"
            },
            "vpc_id": "vpc-0e263608c4c294ea8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:REDACTED_ACCOUNT_ID:subnet/subnet-0eec416fa55709f4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eec416fa55709f4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "REDACTED_ACCOUNT_ID",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "backend-orchestrator-dev-vpc-private-ap-southeast-2b",
              "Project": "backend-orchestrator",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "backend-orchestrator-dev-vpc-private-ap-southeast-2b",
              "Project": "backend-orchestrator",
              "Tier": "private"
            },
            "vpc_id": "vpc-0e263608c4c294ea8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:REDACTED_ACCOUNT_ID:subnet/subnet-0df1e6e4eefd620d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df1e6e4eefd620d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "REDACTED_ACCOUNT_ID",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "backend-orchestrator-dev-vpc-public-ap-southeast-2a",
              "Project": "backend-orchestrator",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "backend-orchestrator-dev-vpc-public-ap-southeast-2a",
              "Project": "backend-orchestrator",
              "Tier": "public"
            },
            "vpc_id": "vpc-0e263608c4c294ea8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:REDACTED_ACCOUNT_ID:subnet/subnet-014e2e930d87d9200",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014e2e930d87d9200",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "REDACTED_ACCOUNT_ID",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "backend-orchestrator-dev-vpc-public-ap-southeast-2b",
              "Project": "backend-orchestrator",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "backend-orchestrator-dev-vpc-public-ap-southeast-2b",
              "Project": "backend-orchestrator",
              "Tier": "public"
            },
            "vpc_id": "vpc-0e263608c4c294ea8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:REDACTED_ACCOUNT_ID:vpc/vpc-0e263608c4c294ea8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c7af5ae3a8096add",
            "default_route_table_id": "rtb-0f7bb8b08d49c87cc",
            "default_security_group_id": "sg-0eab15910b4747655",
            "dhcp_options_id": "dopt-0419ab5ea739c309f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e263608c4c294ea8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f7bb8b08d49c87cc",
            "owner_id": "REDACTED_ACCOUNT_ID",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "backend-orchestrator-dev-vpc",
              "Project": "backend-orchestrator"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "backend-orchestrator-dev-vpc",
              "Project": "backend-orchestrator"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}